@@ -12,14 +12,9 @@ import java.lang.reflect.ParameterizedType;
 import java.util.HashMap;
 import java.util.Map;
 
-import org.slf4j.LoggerFactory;
-import org.slf4j.Logger;
-
 public class FileParser<T>
 {
     private T model;
-
-    Logger logger = LoggerFactory.getLogger(FileParser.class);
 
     //Can be made static or can be done by static constructors or something
     private Map<Class<?>, Class<?>> parserCache = new HashMap<>();
@@ -46,7 +41,7 @@ public class FileParser<T>
         return builder.build();
     }
 
-    private <M> void parse(FileBuilder builder, M model)
+    private <MT> void parse(FileBuilder builder, MT model)
     {
         var modelClass = model.getClass();
         var parser = getParser(modelClass);
@@ -60,42 +55,36 @@ public class FileParser<T>
         
         var properties = getProperties(modelClass);
         
-        for( var property : properties)
+        for(var property : properties)
         {
             var type = property.getPropertyType();
-            
-            //if array, we want to do the same for every item
+            var value = getValue(model, property.getName());
+            if (value == null) continue;
             if(type.isArray())
             {
-                var value = getValue(model, property.getName());
-                if (value == null)
-                {
-                    continue;
-                }
-                
-                for (var i = 0; i < Array.getLength(value); i++)
-                {
-                    var arrayValue = Array.get(value, i);
-                    if (arrayValue == null)
-                    {
-                        continue;
-                    }
-                    
-                    parse(builder, arrayValue);
-                }
-                
+                handleArray(builder, value);
             }
-            //If its a class we try get a parser also
+
             else if (type.getClassLoader() != null)
             {
-                var value = getValue(model, property.getName());
-                if (value == null)
-                {
-                    continue;
-                }
-                
-                parse(builder, value);
+                handleClassLoader(builder, value);
             }
+        }
+    }
+
+    private void handleClassLoader(FileBuilder builder, Object value) {
+        parse(builder, value);
+    }
+
+    private void handleArray(FileBuilder builder, Object value) {
+        for (var i = 0; i < Array.getLength(value); i++)
+        {
+            var arrayValue = Array.get(value, i);
+            if (arrayValue == null)
+            {
+                continue;
+            }
+            parse(builder, arrayValue);
         }
     }
 
@@ -155,13 +144,9 @@ public class FileParser<T>
     {
         try
         {
-            return (IParser) parser.newInstance();
+            return (IParser) parser.getDeclaredConstructor().newInstance();
         }
-        catch (InstantiationException e)
-        {
-            return null;
-        }
-        catch (IllegalAccessException e)
+        catch (InstantiationException|IllegalAccessException|NoSuchMethodException|InvocationTargetException e)
         {
             return null;
         }
@@ -176,7 +161,6 @@ public class FileParser<T>
         }
         catch (IntrospectionException e)
         {
-            logger.info("getProperties - IntrospectionException");
             e.printStackTrace();
             return new PropertyDescriptor[0];
         }
